[gd_scene load_steps=2 format=3 uid="uid://denet_lobby"]

[ext_resource type="Script" path="res://scripts/ui/multiplayer_lobby.gd" id="1_lobby"]

[node name="MultiplayerLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MULTIPLAYER TEST"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST GAME"

[node name="JoinContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"
placeholder_text = "IP Address"

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinContainer"]
layout_mode = 2
text = "JOIN"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to connect..."
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "BACK"
